--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Transform Boilerplate</title>
+    <title>Bible Reader 3</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
     <div id='root'>
