--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bible Reader 3</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
-  <body>
+  <body style="margin: 0;">
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
