add icon for google login button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Bible Reader 3</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body style="margin: 0;">
     <div id='root'>
